--- a/package.json
+++ b/package.json
@@ -1,21 +1,32 @@
 {
   "name": "mde-soundboard",
   "private": true,
-  "dependencies": {},
+  "dependencies": {
+    "SoundManager2": "scottschiller/SoundManager2",
+    "jquery": "2.1.3"
+  },
   "devDependencies": {
+    "browserify": "9.0.6",
     "express": "4.12.3",
     "gulp": "3.8.11",
-    "gulp-concat": "2.5.2",
     "gulp-filter": "2.0.2",
     "gulp-if": "1.2.5",
     "gulp-inject": "1.2.0",
+    "gulp-less": "3.0.2",
     "gulp-livereload": "3.8.0",
     "gulp-minify-css": "1.0.0",
+    "gulp-plumber": "1.0.0",
+    "gulp-rename": "1.2.2",
     "gulp-rev": "3.0.1",
     "gulp-uglify": "1.1.0",
     "gulp-util": "3.0.4",
-    "gulp-watch": "4.2.0",
+    "gulp-watch": "4.2.2",
     "rimraf": "2.3.2",
-    "run-sequence": "1.0.2"
+    "run-sequence": "1.0.2",
+    "vinyl-buffer": "1.0.0",
+    "vinyl-source-stream": "1.1.0"
+  },
+  "scripts": {
+    "start": "./node_modules/.bin/gulp watch"
   }
 }
