--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "jquery": "2.1.3"
   },
   "devDependencies": {
+    "babelify": "6.0.1",
     "browserify": "9.0.6",
     "express": "4.12.3",
     "gulp": "3.8.11",
