--- a/package.json
+++ b/package.json
@@ -3,27 +3,28 @@
   "private": true,
   "dependencies": {
     "SoundManager2": "scottschiller/SoundManager2",
-    "jquery": "2.1.3"
+    "jquery": "2.1.4"
   },
   "devDependencies": {
-    "babelify": "6.0.2",
-    "browserify": "9.0.8",
-    "express": "4.12.3",
-    "gulp": "3.8.11",
+    "babel": "5.5.4",
+    "babelify": "6.1.2",
+    "browserify": "10.2.4",
+    "express": "4.12.4",
+    "gulp": "3.9.0",
     "gulp-filter": "2.0.2",
     "gulp-if": "1.2.5",
     "gulp-inject": "1.2.0",
     "gulp-less": "3.0.3",
     "gulp-livereload": "3.8.0",
-    "gulp-minify-css": "1.1.0",
-    "gulp-plumber": "1.0.0",
+    "gulp-minify-css": "1.1.6",
+    "gulp-plumber": "1.0.1",
     "gulp-rename": "1.2.2",
-    "gulp-rev": "3.0.1",
+    "gulp-rev": "4.0.0",
     "gulp-uglify": "1.2.0",
-    "gulp-util": "3.0.4",
+    "gulp-util": "3.0.5",
     "gulp-watch": "4.2.4",
-    "rimraf": "2.3.2",
-    "run-sequence": "1.0.2",
+    "rimraf": "2.3.4",
+    "run-sequence": "1.1.0",
     "vinyl-buffer": "1.0.0",
     "vinyl-source-stream": "1.1.0"
   },
