--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
     "jquery": "2.1.4"
   },
   "devDependencies": {
-    "babel": "5.5.4",
-    "babelify": "6.1.2",
-    "browserify": "10.2.4",
-    "express": "4.12.4",
+    "babel": "5.6.23",
+    "babelify": "6.1.3",
+    "browserify": "10.2.6",
+    "express": "4.13.1",
     "gulp": "3.9.0",
+    "gulp-autoprefixer": "2.3.1",
     "gulp-filter": "2.0.2",
     "gulp-if": "1.2.5",
     "gulp-inject": "1.2.0",
@@ -21,10 +22,10 @@
     "gulp-rename": "1.2.2",
     "gulp-rev": "4.0.0",
     "gulp-uglify": "1.2.0",
-    "gulp-util": "3.0.5",
+    "gulp-util": "3.0.6",
     "gulp-watch": "4.2.4",
-    "rimraf": "2.3.4",
-    "run-sequence": "1.1.0",
+    "rimraf": "2.4.1",
+    "run-sequence": "1.1.1",
     "vinyl-buffer": "1.0.0",
     "vinyl-source-stream": "1.1.0"
   },
