--- a/package.json
+++ b/package.json
@@ -6,26 +6,26 @@
     "jquery": "2.1.4"
   },
   "devDependencies": {
-    "babel": "5.6.23",
+    "babel": "5.8.21",
     "babelify": "6.1.3",
-    "browserify": "10.2.6",
-    "express": "4.13.1",
+    "browserify": "11.0.1",
+    "del": "1.2.0",
+    "express": "4.13.3",
     "gulp": "3.9.0",
     "gulp-autoprefixer": "2.3.1",
-    "gulp-filter": "2.0.2",
+    "gulp-filter": "3.0.0",
     "gulp-if": "1.2.5",
-    "gulp-inject": "1.2.0",
+    "gulp-inject": "1.5.0",
     "gulp-less": "3.0.3",
     "gulp-livereload": "3.8.0",
-    "gulp-minify-css": "1.1.6",
+    "gulp-minify-css": "1.2.0",
     "gulp-plumber": "1.0.1",
     "gulp-rename": "1.2.2",
-    "gulp-rev": "4.0.0",
+    "gulp-rev": "5.1.0",
     "gulp-uglify": "1.2.0",
     "gulp-util": "3.0.6",
-    "gulp-watch": "4.2.4",
-    "rimraf": "2.4.1",
-    "run-sequence": "1.1.1",
+    "gulp-watch": "4.3.4",
+    "run-sequence": "1.1.2",
     "vinyl-buffer": "1.0.0",
     "vinyl-source-stream": "1.1.0"
   },
