--- a/package.json
+++ b/package.json
@@ -6,30 +6,36 @@
     "soundmanager2": "2.97.20150601"
   },
   "devDependencies": {
-    "babel": "5.8.21",
-    "babelify": "6.1.3",
-    "browserify": "11.0.1",
-    "del": "1.2.0",
+    "babel-preset-es2015": "6.3.13",
+    "babelify": "7.2.0",
+    "browserify": "12.0.1",
+    "del": "2.2.0",
     "express": "4.13.3",
+    "get-wanted-dependencies": "1.1.1",
     "gulp": "3.9.0",
-    "gulp-autoprefixer": "2.3.1",
-    "gulp-filter": "3.0.0",
-    "gulp-if": "1.2.5",
-    "gulp-inject": "1.5.0",
-    "gulp-less": "3.0.3",
-    "gulp-livereload": "3.8.0",
-    "gulp-minify-css": "1.2.0",
+    "gulp-autoprefixer": "3.1.0",
+    "gulp-filter": "3.0.1",
+    "gulp-if": "2.0.0",
+    "gulp-inject": "3.0.0",
+    "gulp-less": "3.0.5",
+    "gulp-livereload": "3.8.1",
+    "gulp-minify-css": "1.2.3",
     "gulp-plumber": "1.0.1",
     "gulp-rename": "1.2.2",
-    "gulp-rev": "5.1.0",
-    "gulp-uglify": "1.2.0",
-    "gulp-util": "3.0.6",
-    "gulp-watch": "4.3.4",
-    "run-sequence": "1.1.2",
+    "gulp-rev": "6.0.1",
+    "gulp-uglify": "1.5.1",
+    "gulp-util": "3.0.7",
+    "gulp-watch": "4.3.5",
+    "run-sequence": "1.1.5",
     "vinyl-buffer": "1.0.0",
     "vinyl-source-stream": "1.1.0"
   },
   "scripts": {
     "start": "./node_modules/.bin/gulp watch"
+  },
+  "babel": {
+    "presets": [
+      "es2015"
+    ]
   }
 }
