--- a/gulpconfig.json
+++ b/gulpconfig.json
@@ -4,7 +4,7 @@
   "buildDir": "dist",
   "index": "src/index.html",
   "script": "src/scripts/app.js",
-  "style": "src/styles/app.less",
+  "style": "src/styles/app.scss",
   "misc": [
     "src/images/**/*.{ico,gif,jpg,png}",
     "src/sounds/**/*.mp3"
