--- a/package.json
+++ b/package.json
@@ -6,26 +6,26 @@
     "soundmanager2": "2.97.20150601"
   },
   "devDependencies": {
-    "babel-preset-es2015": "6.3.13",
+    "babel-preset-es2015": "6.6.0",
     "babelify": "7.2.0",
-    "browserify": "12.0.1",
+    "browserify": "13.0.0",
     "del": "2.2.0",
-    "express": "4.13.3",
+    "express": "4.13.4",
     "get-wanted-dependencies": "1.1.1",
     "gulp": "3.9.1",
     "gulp-autoprefixer": "3.1.0",
-    "gulp-filter": "3.0.1",
+    "gulp-clean-css": "2.0.4",
+    "gulp-filter": "4.0.0",
     "gulp-if": "2.0.0",
-    "gulp-inject": "3.0.0",
-    "gulp-less": "3.0.5",
+    "gulp-inject": "4.0.0",
     "gulp-livereload": "3.8.1",
-    "gulp-minify-css": "1.2.3",
-    "gulp-plumber": "1.0.1",
     "gulp-rename": "1.2.2",
-    "gulp-rev": "6.0.1",
-    "gulp-uglify": "1.5.1",
+    "gulp-rev": "7.0.0",
+    "gulp-sass": "2.2.0",
+    "gulp-uglify": "1.5.3",
     "gulp-util": "3.0.7",
     "gulp-watch": "4.3.5",
+    "rememberify": "1.0.1",
     "run-sequence": "1.1.5",
     "vinyl-buffer": "1.0.0",
     "vinyl-source-stream": "1.1.0"
