--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
   "name": "mde-soundboard",
   "private": true,
+  "scripts": {
+    "start": "./node_modules/.bin/gulp watch"
+  },
   "dependencies": {
     "font-awesome": "4.5.0",
     "jquery": "2.2.3",
     "soundmanager2": "2.97.20150601"
   },
   "devDependencies": {
-    "babel-preset-es2015": "6.6.0",
+    "babel-preset-es2015": "6.24.1",
+    "babel-preset-stage-0": "6.24.1",
     "babelify": "7.2.0",
     "browserify": "13.0.0",
     "del": "2.2.0",
@@ -31,12 +35,10 @@
     "vinyl-buffer": "1.0.0",
     "vinyl-source-stream": "1.1.0"
   },
-  "scripts": {
-    "start": "./node_modules/.bin/gulp watch"
-  },
   "babel": {
     "presets": [
-      "es2015"
+      "es2015",
+      "stage-0"
     ]
   }
 }
