--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "soundmanager2": "2.97.20170602"
   },
   "devDependencies": {
+    "babel-plugin-transform-inline-environment-variables": "0.4.3",
     "babel-preset-es2015": "6.24.1",
     "babel-preset-stage-0": "6.24.1",
     "babelify": "7.2.0",
@@ -38,6 +39,9 @@
     "presets": [
       "es2015",
       "stage-0"
+    ],
+    "plugins": [
+      "transform-inline-environment-variables"
     ]
   }
 }
