--- a/package.json
+++ b/package.json
@@ -1,24 +1,25 @@
 {
-  "name": "mde-soundboard",
   "private": true,
   "scripts": {
     "start": "./node_modules/.bin/gulp watch"
   },
   "dependencies": {
+    "core-js": "3.6.4",
     "font-awesome": "4.7.0",
     "soundmanager2": "2.97.20170602"
   },
   "devDependencies": {
+    "@babel/core": "7.8.3",
+    "@babel/preset-env": "7.8.3",
+    "@babel/register": "7.8.3",
     "babel-plugin-transform-inline-environment-variables": "0.4.3",
-    "babel-preset-es2015": "6.24.1",
-    "babel-preset-stage-0": "6.24.1",
-    "babelify": "7.2.0",
-    "browserify": "13.0.0",
+    "babelify": "10.0.0",
+    "browserify": "13.3.0",
     "del": "2.2.0",
     "express": "4.13.4",
     "get-wanted-dependencies": "1.1.1",
     "gulp": "3.9.1",
-    "gulp-autoprefixer": "3.1.0",
+    "gulp-autoprefixer": "6.1.0",
     "gulp-clean-css": "2.0.4",
     "gulp-filter": "4.0.0",
     "gulp-if": "2.0.0",
@@ -27,21 +28,13 @@
     "gulp-rename": "1.2.2",
     "gulp-rev": "7.0.0",
     "gulp-sass": "2.2.0",
-    "gulp-uglify": "1.5.3",
+    "gulp-uglify": "3.0.1",
     "gulp-util": "3.0.7",
     "gulp-watch": "4.3.5",
     "rememberify": "1.0.1",
     "run-sequence": "1.1.5",
+    "uglify-es": "3.3.9",
     "vinyl-buffer": "1.0.0",
     "vinyl-source-stream": "1.1.0"
-  },
-  "babel": {
-    "presets": [
-      "es2015",
-      "stage-0"
-    ],
-    "plugins": [
-      "transform-inline-environment-variables"
-    ]
   }
 }
